[package]
name = "cp_sat"
version = "0.3.3"
edition = "2018"
description = "Rust bindings to the Google CP-SAT constraint programming solver."
documentation = "https://docs.rs/cp_sat"
repository = "https://github.com/bc-ross/cp_sat"
license = "Apache-2.0"
keywords = ["constraint", "programming", "CP"]
categories = ["api-bindings", "mathematics", "science"]
readme = "README.md"

[dependencies]
prost = "0.8"
bytes = "1.1.0"
libc = "0.2.101"
smallvec = { version = "1.6.1", default-features = false, features = ["union"] }

[build-dependencies]
anyhow = "^1.0.99"
prost-build = { version = "0.8" }
cc = "1.0"
glob = "0.3"
flate2 = "^1.1.2"
tar = "^0.4.44"
ureq = "^2.12.1"
cargo_metadata = "^0.21.0"
zip = "^4.3.0"

[package.metadata]
ortools_version = "9.9"
ortools_patch = "3963"
